--- a/_posts/intro/2023-02-21-Intro.md
+++ b/_posts/intro/2023-02-21-Intro.md
@@ -39,7 +39,7 @@ Cada etapa do processo de onboarding tem seus próprios objetivos, que incluem:
 - Treinamento: capacitar o novo colaborador para desempenhar suas funções.
 - Acompanhamento: oferecer suporte e orientação ao novo colaborador para garantir uma transição tranquila.
 
-![image](/figs/boss.png)
+![image](../assets/figs/boss.png)
 
 
 > ##### Ideia Principal
