material escrito inicial

--- a/_posts/parte II/2023-02-24-Execucao.md
+++ b/_posts/parte II/2023-02-24-Execucao.md
@@ -1,5 +1,5 @@
 ---
-title: Parte II - Execução
+title: Parte II - Acelerando o Aprendizado
 author: Carla Rocha
 date: 2023-02-24
 category: Jekyll
