--- a/_posts/parte II/2023-02-24-Execucao.md
+++ b/_posts/parte II/2023-02-24-Execucao.md
@@ -17,7 +17,7 @@ Esse capítulo é dedicado aos participantes do processo do processo de onboardi
 
 ## Roadmap do Onboard
 
-![image](../assets/figs/roadmap.jpg)
+![image](../assets/figs/roadmap.png)
 
 
 ##  Recepção + Orientações gerais
@@ -50,11 +50,16 @@ Propomos sessões práticas focadas no desenvolvimento de projetos Open Source, 
 É interessante destacar que essa abordagem de deixar os alunos lutarem e procurarem informações por conta própria faz parte do modelo de aprendizagem experiencial de David Kolb, que valoriza a autodescoberta e a aprendizagem autônoma como elementos-chave para o processo de aprendizagem. O curso não fornece um plano detalhado para a entrega final do projeto, o que se assemelha aos projetos de software reais. Essa decisão central é deixada para as equipes, o que lhes permite exercitar suas habilidades de gestão e decisão, além de incentivar a colaboração com outras equipes, mentores e professores. Isso inclui a definição de processos, conjunto de ferramentas, pipeline de entrega, automação, ambiente de execução, monitoramento, atribuição de tarefas, entregas, treinamento da equipe, entre outros aspectos. Aprender com base na experiência é mais importante e benéfico do que uma abordagem puramente teórica, pois evidencia como os conceitos técnicos e não técnicos estão interconectados e ambos impactam a entrega final. Vários alunos relataram a dificuldade inicial em tomar decisões e a insegurança de não ter uma lista de tarefas pré-definida. No entanto, eles reconheceram a importância da tomada de decisão para compreender os elementos que impactam a entrega contínua.
 
 Além disso, ao apresentar os entregáveis esperados em macro atividades, permite-se que os alunos tenham liberdade para definir seus próprios caminhos e desenvolver suas habilidades não técnicas, o que pode ser extremamente valioso para sua formação como desenvolvedores. Nessa etapa são desenvolvidas várias habilidades não técnicas, como comunicação efetiva, auto aprendizagem, gestão de horas, gestão des conflitos, agir mesmo com pouca informação. Esse setup é bastante próximo de início de projetos no mercado. 
-
                                                                                                                                     
-### Papéis
+### Formação das Equipes
 
 Cada aluno desempenha um papel único em uma equipe DevOps, que se assemelha a uma equipe de produto, com a responsabilidade coletiva de "Você construiu, você executa".
+
+
+5.1 Time multidisciplinar
+5.2 Time auto-organizável
+5.3 Sentando lado a lado
+5.4 As reuniões de retrospectiva e a melhoria contínua
 
 As funções, suas responsabilidades e entregas são as seguintes:
 
@@ -83,7 +88,7 @@ As restrições do projeto são importantes para limitar o escopo do projeto, es
 - Ciclos de entrega: existem dois lançamentos oficiais significativos no curso, nos quais as equipes apresentam suas soluções a um conselho de avaliação.
 
 
-### Práticas Obrigatórias
+### Práticas de aprendizagem 
 
 | Categorias                               | Conceitos                                                                                                                                                                                                                                                                                                                                                                                                                     | Práticas                                                                                                                                                                                                                                                                                                                            |
 |------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -92,9 +97,21 @@ As restrições do projeto são importantes para limitar o escopo do projeto, es
 | Processo de Build (Entrega)                 | Release engineering; Continuous delivery; Automation; Testing automation; Correctness; and Static analysis.                                                                                                                                                                                                                                                                                                                       | Deployment pipeline stages; Automation; Unit test; Integration tests; and components tests.                                                                                                                                                                                                                                         |
 | Integração Contínua (Entrega)        | Frequent and reliable release process; Release engineering; Deployment pipeline; Continuous integration; Automation; and Continuous delivery.                                                                                                                                                                                                                                                                                     | Build and deploy automated; badges status in readme; and git-flow.                                                                                                                                                                                                                                                                  |
 | Deployment Contínua (Entrega/Runtime) | Frequent and reliable release process; Release engineering; Continuous delivery; Configuration management; Automation; Infrastructure as code; Virtualization; and Containerization.                                                                                                                                                                                                                                              | Git-flow; Continuous Integration; Build and Deploy automated; Architecture Structure; Documentation; and pipline stage documentation.                                                                                                                                                                                               |
-| Monitoramento & Logging (Entrega/Runtime)  | You built it, you run it; Availability; After-hours support for Devs; Alerting; Continuous runtime monitoring; Security; Performance; Automation Metrics; Experiments Log management; Reliability; and Scalability Resilience.                                                                                                                                                                                                    | Operation tasks in issues; Logging; Monitoring; and Benchmark.                                                                                                                                                                                                                                                                      |
+| Monitoramento & Logging (Entrega/Runtime)  | You built it, you run it; Availability; After-hours support for Devs; Alerting; Continuous runtime monitoring; Security; Performance; Automation Metrics; Experiments Log management; Reliability; and Scalability Resilience.                                                                                                                                                                                                    | Operation tasks in issues; Logging; Monitoring; and Benchmark.                      |
 
-### Entregáveis
+
+### Especificar, projetar, trabalhar, tudo em par
+
+Benefícios Programação em par
+
+Nivelando o conhecimento
+
+
+Pair programming essentially means that two people write code together on one machine. It is a very collaborative way of working and involves a lot of communication. While a pair of developers work on a task together, they do not only write code, they also plan and discuss their work. They clarify ideas on the way, discuss approaches and come to better solutions.
+
+https://martinfowler.com/articles/on-pair-programming.html
+
+### Entregas
 
 Embora o foco principal do curso fosse o desenvolvimento do projeto para avaliar o resultado da aprendizagem, foram estabelecidos alguns outros entregáveis ao longo do período. A lista de entregáveis inclui:
 
@@ -199,6 +216,10 @@ Alguns exemplos podem incluir:
 - Colaboração com outras equipes ou departamentos da empresa, como equipes de operações, marketing e vendas, para garantir a integração efetiva do software no ambiente de negócios.
 
 https://caroli.org/medir-a-produtividade-em-equipes-de-software-vai-alem-de-olhar-apenas-o-volume-de-codigo-produzido-voce-precisa-do-coeficiente-de-produtividade/
+
+
+### Definindo o significado de Pronto
+
 
 ## Práticas
 The labs on the other hand, consisted of sprint activities such as planning, demo and retrospectives
