--- a/_posts/parte II/2023-02-24-Execucao.md
+++ b/_posts/parte II/2023-02-24-Execucao.md
@@ -15,14 +15,18 @@ Embora o uso de casos acadêmicos possa ser útil, ele pode fornecer uma perspec
 
 Esse capítulo é dedicado aos participantes do processo do processo de onboarding com o objetivo de aprender sobre Métodos de Desenvolvimento de Software, mais especificamente aprender os conceitos e práticas relacionados aos métodos ágeis. É a concretização do planejamento realizado na etapa anterior. 
 
-## Roadmap do Onboard
+## Roadmap do Metodologia
+
+A imagem abaixo reapresenta todos os elementos da metodologia utilizada para o desenvolvimento de um ciclo de formação a partir do projeto de software. A metodologia combina fundamentos de processo de onboarding, aprendizagem por experiência e práticas de comunidades de software livre para proporcionar uma experiência de aprendizagem completa e efetiva. A imagem ilustra a cronologia do ciclo de formação e destaca os principais pontos de cada fase.
 
 ![image](../assets/figs/roadmap.png)
 
 
-##  Recepção + Orientações gerais
+##  Fase Explorar - Boas Vindas e Orientações gerais
 
-A primeira etapa da metodologia envolve ciclos de introdução às informações gerais necessárias para iniciar o projeto, formação das equipes, definição de papéis, escolha de ferramentas e práticas para acolher os participantes. A duração dessa etapa pode variar dependendo da frequência dos encontros. Por exemplo, se houver dois encontros semanais, a primeira etapa pode durar até duas semanas. Já se houver apenas um encontro semanal, a primeira etapa pode durar até um mês.
+A primeira etapa da metodologia envolve introdução às informações gerais necessárias para iniciar o projeto, formação das equipes, definição de papéis, escolha de ferramentas e práticas para acolher os participantes. A duração dessa etapa pode variar dependendo da frequência dos encontros. Por exemplo, se houver dois encontros semanais, a primeira etapa pode durar até duas semanas. Já se houver apenas um encontro semanal, a primeira etapa pode durar até um mês.
+
+Nesta etapa, as equipes começam o projeto com base nas informações gerais fornecidas. No entanto, a falta de detalhamento das entregas por sprint gera a sensação de dificuldade  dos alunos na execução das tarefas. É importante ressaltar que a dificuldade nesta fase é fundamental para a aprendizagem por experiência e para o desenvolvimento de habilidades não técnicas, tais como iniciativa, autodidatismo, tomada de decisão e gestão de erros. Portanto, é importante que haja um equilíbrio entre o detalhamento das tarefas e a oportunidade de enfrentar desafios e desenvolver habilidades valiosas.
 
 
 > ##### Objetivo
@@ -177,7 +181,7 @@ Segue um checklist para ajudar na organização da primeira etapa do onboarding 
 Segue um checklist para as equipes.
 
 
-## Acompanhamento + feedback contínuo
+## Fase Definir/Prototipar 
 
 A medição da produtividade das equipes de software é uma tarefa complexa e desafiadora. Em primeiro lugar, a própria noção de produtividade pode ser subjetiva e variar de pessoa para pessoa. Mesmo quando se estabelecem parâmetros de referência e métricas, a percepção da produtividade por um engenheiro de software pode ser diferente daquela de um executivo ou membro do conselho. 
 
@@ -215,14 +219,30 @@ Alguns exemplos podem incluir:
 - Participação em treinamentos e desenvolvimento profissional;
 - Colaboração com outras equipes ou departamentos da empresa, como equipes de operações, marketing e vendas, para garantir a integração efetiva do software no ambiente de negócios.
 
-https://caroli.org/medir-a-produtividade-em-equipes-de-software-vai-alem-de-olhar-apenas-o-volume-de-codigo-produzido-voce-precisa-do-coeficiente-de-produtividade/
 
 
 ### Definindo o significado de Pronto
 
+### Checklist
+Nesta fase do projeto, espera-se que as práticas ágeis estejam sendo executadas de forma mais madura. Para ajudar a garantir a produtividade da equipe, segue um checklist com algumas práticas ágeis a serem consideradas:
 
-## Práticas
-The labs on the other hand, consisted of sprint activities such as planning, demo and retrospectives
+- [ ] Os rituais de planejamento, review, retrospectiva estão acontecendo sempre no mesmo dia/horário?
+- [ ] Os rituais são time-box (começam sem atraso e terminam no horário limite estipulado)?
+- [ ] A técnica de planning poker está sendo feita para pontuar as issues?
+- [ ] As issues (US, features, Épicos) são documentadas de forma padronizadas (seguind templates)?
+- [ ] Tem pelo menos 1 issue por membro/dupla por sprint?
+- [ ] Os stand-ups estão acontecendo todos os dias?
+- [ ] Todos os membros se sentem a vontade para falar nos rituais?
+- [ ] 
+
+Segue um checklist de alguns artefatos desenvolvidos nessa etapa do projeto:
+
+- [ ] Checklist dos padrões de comunidade de OSS devem ter sido cumpridos [https://opensource.guide](https://opensource.guide)
+- [ ] 
+
+
+## Fase Desenvolver/Testar
+
 
 
 ## Sessões Teóricas
@@ -267,28 +287,3 @@ Segue um checklist para ajudar na organização da primeira etapa do onboarding 
 
 ## Retrospectiva e pontos de melhoria
 
-### Checklist
-
-Segue um checklist para ajudar na organização do evento de recepção:
-
-- [ ] Definir dos dias/horários/local dos encontros semanais
-- [ ] Apresentar a visão geral do processo de onboarding
-- [ ] Apresentar as listas de Entregáveis para a Release I e Release II
-- [ ] Definir as datas da Release I e Release II
-- [ ] Definir as equipes/squads
-- [ ] Definir os canais de comunicação (Comunicação rápida/informes, dúvidas, decisões, tarefas)
-- [ ] Definir dias/horários/locais de disponibilidades dos instrutores
-- [ ] Definir dias/horários/locais dos treinamentos
-- [ ] Compartilhar os repositórios de projetos passados
-- [ ] Garantir que todos os participantes tem todos acessos necessários (repositório, lista de e-mails, Discord, etc)
-- [ ] Garantir que todos os participantes tenham os contatos dos instrutores
-
-Segue um checklist para ajudar na organização da primeira etapa do onboarding para o professor/mentor. 
-
-- [ ] Apresentar o ciclo de vida de projetos de software
-- [ ] Apresentar práticas de gestão de equipes ágeis - Scrum
-- [ ] Apresentar práticas de documentação ágil - issues, templates de issues, comunicação de issues
-- [ ] Apresentar o conceito de timebox e exercitar em atividades síncronas
-- [ ] Organizar um evento para que os clientes possam apresentar os problemas a serem resolvidos com software
-
-Segue um checklist para ajudar na organização da primeira etapa do onboarding para os instrutores.
