commitao do dia

--- a/_posts/parte II/2023-02-24-Execucao.md
+++ b/_posts/parte II/2023-02-24-Execucao.md
@@ -21,6 +21,11 @@ A imagem abaixo reapresenta todos os elementos da metodologia utilizada para o d
 
 ![image](../assets/figs/roadmap.png)
 
+## Estratégia do Coelho de Maratona
+
+Corredores chamados de "coelhos" ou "liebres" (em espanhol) são atletas experientes que são contratados para ajudar a impor um ritmo consistente para os corredores de elite em uma maratona ou outra corrida de longa distância. Os coelhos geralmente são contratados para correr a primeira metade ou dois terços da corrida em um ritmo mais rápido do que o ritmo do recorde mundial ou do tempo desejado pelo corredor de elite. O objetivo é ajudar o corredor a manter um ritmo constante e não "quebrar" ao longo da corrida, permitindo que ele ou ela termine com um tempo mais rápido. 
+
+Um dos princípios fundamentais do desenvolvimento ágil de software é a transmissão contínua de conhecimento entre membros de uma mesma equipe. Uma estratégia eficaz para otimizar recursos no início de um projeto é alocar tarefas de estudo para diferentes membros da equipe. Esses membros são conhecidos como "coelhos" e são responsáveis por aprender sozinhos os conceitos, mapear as fontes de informação mais relevantes para o contexto do projeto e documentar o processo de aprendizagem como um tutorial. Em seguida, compartilham esse material com o restante da equipe, que acompanha o ritmo de aprendizagem dos "coelhos". Essa abordagem é uma maneira eficiente de compartilhar conhecimento e garantir que todos os membros da equipe estejam alinhados com as metas e objetivos do projeto desde o início.
 
 ##  Fase Explorar - Boas Vindas e Orientações gerais
 
