--- a/_posts/parte II/2023-02-24-Execucao.md
+++ b/_posts/parte II/2023-02-24-Execucao.md
@@ -64,12 +64,6 @@ Além disso, ao apresentar os entregáveis esperados em macro atividades, permit
 
 Cada aluno desempenha um papel único em uma equipe DevOps, que se assemelha a uma equipe de produto, com a responsabilidade coletiva de "Você construiu, você executa".
 
-
-5.1 Time multidisciplinar
-5.2 Time auto-organizável
-5.3 Sentando lado a lado
-5.4 As reuniões de retrospectiva e a melhoria contínua
-
 As funções, suas responsabilidades e entregas são as seguintes:
 
 - *Scrum Master/Tech Leader*: Responsável pela execução de conceitos e práticas de gerenciamento de projetos. Entregáveis esperados incluem documentação de processo, métricas de produtividade e análise e avaliação contínuas da maturidade das práticas ágeis da equipe.
@@ -136,9 +130,6 @@ O logbook, ou diário de bordo, é uma ferramenta utilizada para cada aluno regi
 
 Na última semana, cada equipe é solicitada a apresentar uma demonstração ao vivo da solução para o cliente e realizar uma apresentação final. Além disso, cada equipe escreve um relatório final contendo todas as decisões de projeto, suposições e resultados obtidos.
 
-### Timeline do projeto
-
-A metodologia apresentada pode ser aplicada em vários timelines. 
 
 
 ### Comunicação
@@ -170,7 +161,7 @@ Segue um checklist para ajudar na organização do evento de recepção:
 - [ ] Garantir que todos os participantes tem todos acessos necessários (repositório, lista de e-mails, Discord, etc)
 - [ ] Garantir que todos os participantes tenham os contatos dos instrutores
 
-Segue um checklist para ajudar na organização da primeira etapa do onboarding para o professor/mentor. 
+Segue um checklist para ajudar na organização da primeira etapa do onboarding para o professor. 
 
 - [ ] Apresentar o ciclo de vida de projetos de software
 - [ ] Apresentar práticas de gestão de equipes ágeis - Scrum
@@ -178,12 +169,47 @@ Segue um checklist para ajudar na organização da primeira etapa do onboarding 
 - [ ] Apresentar o conceito de timebox e exercitar em atividades síncronas
 - [ ] Organizar um evento para que os clientes possam apresentar os problemas a serem resolvidos com software
 
-Segue um checklist para ajudar na organização da primeira etapa do onboarding para os instrutores.
-
+Segue um checklist para ajudar na organização da primeira etapa do onboarding para os monitores/coaches.
+ 
 - [ ] Compartilhar o contato 
+- [ ] Organizar as datas/horários/locais dos treinamentos
+- [ ] Treinamentos sugeridos: revisão de comandos git, revisão de OO, práticas ágeis 
 
 
 Segue um checklist para as equipes.
+
+- [ ] Monte a equipe e compartilhem os contatos
+- [ ] Façam o mapa de horários livre, e definam os horários que cada um vai dedicar pro projeto semanalmente
+- [ ] Mapeem os riscos pessoais (computador quebrando, dificuldade de conectividade, dificuldade de locomoção para as reuniões, entre outros)
+- [ ] Façam o quadro de conhecimento (a partir do quadro de conhecimento, levantem os treinamentos iniciais necessários para nivelar a equipe)
+- [ ] Definam o dia/horário da semana para os rituais ágeis: reunião (2 horas), retrospectiva e review (1 hora), stand up (5 min/dia)
+
+ - Métricas de sucesso:
+
+    -  Os participantes têm seu ambiente de trabalho configurado corretamente (programação em pares com o mentor, se necessário);
+    - Os participantes concluíram os exercícios de git;
+    - Os canais de comunicação (grupo de telegrama, questões) são usados corretamente;
+    - Os interesses, habilidades, motivações e ambições dos participantes são mapeados.
+
+- Dicas:
+
+    - Empregue a estratégia "Recomendar tarefas repetitivas" - usamos essa estratégia para ajudar irmãos mais novos a dominar as habilidades do git e ganhar confiança antes de passar para tarefas mais complexas. Temos tarefas semanais, pedindo a eles para:
+    - Atualizar o Readme de sua página pessoal do GitHub;
+    - Abrir um pull request em https://github.com/twilio-labs/open-pixel-art;
+    - Abrir/comentar uma no repositório do projeto.
+    - Estabeleça, desde o início do programa, um cronograma de oficinas fixo (dia útil, hora) com uma duração definida. Ser capaz de organizar o tempo com antecedência é crucial para manter os participantes engajados.
+    - Use o máximo possível de ferramentas de código aberto. Isso apresenta os participantes ao ecossistema FOSS e a diferentes comunidades.
+    - Quando as mulheres são mentoradas por outras mulheres, elas relatam sentimentos de inspiração, solidariedade, irmandade e um ambiente amigável. Portanto, deve-se levar em consideração a interseccionalidade de gênero, raça, etnia e deficiências, tanto dos participantes quanto dos mentores, para fazer a correspondência.
+    - Os mentores devem encorajar os participantes a compartilhar suas conquistas com outros participantes. Isso promove uma comunidade acolhedora, com feedback construtivo, colaboração e dificuldades antecipadas que os participantes possam estar enfrentando.
+
+- Treinamento sugerido:
+    - História do código aberto livre, filosofia, as quatro liberdades essenciais, além do software (cultura);
+    - Fundamentos do git;
+    - Configuração do ambiente local (instalação do Linux, instalação do git, IDE, dependências);
+    - Fluxo de trabalho de contribuição de OSS (da comunicação da questão ao pull request).
+    - Comunicação
+    - Trabalho remoto
+
 
 
 ## Fase Definir/Prototipar 
@@ -193,7 +219,6 @@ A medição da produtividade das equipes de software é uma tarefa complexa e de
 No desenvolvimento de software, a produtividade não se resume apenas ao volume de código escrito ou à ausência de erros. Existem muitos outros fatores que podem influenciar a produtividade da equipe, como a qualidade do código, a eficiência do processo de desenvolvimento, a colaboração entre membros da equipe, o uso de ferramentas e tecnologias apropriadas, entre outros.
 
 Portanto, para medir adequadamente a produtividade de uma equipe de software, é essencial ter uma compreensão abrangente e holística do processo de desenvolvimento, bem como das necessidades e objetivos da empresa. Além disso, é importante ter uma abordagem flexível e adaptável, que possa se ajustar às mudanças nas prioridades e demandas do projeto. Somente assim será possível obter uma visão precisa e útil da produtividade da equipe.
-
 
 É verdade que métricas como *Deployment Frequency*, *Cycle Time*, *Pull Request Throughput*, *Code Activity* e *Lead Time* podem ser úteis para medir a produtividade das equipes de software. No entanto, é importante lembrar que essas métricas não são a única forma de medir a produtividade e podem não ser suficientes por si só.
 
@@ -213,7 +238,6 @@ A maturidade no desenvolvimento de software é um conceito que se refere à capa
 Por outro lado, a produtividade no desenvolvimento de software se concentra no ritmo e eficiência do trabalho da equipe, medindo a capacidade de produzir resultados de maneira rápida e eficaz. Isso inclui métricas como a quantidade de trabalho concluído em um determinado período de tempo, a rapidez com que as alterações de código são implementadas e a frequência com que o software é distribuído para o usuário final.
 
 Equipes de alto desempenho em desenvolvimento de software devem reconhecer a importância de investir tempo em apoiar outras atividades que são vitais para o sucesso do projeto, mesmo que não envolvam diretamente alterações de código ou mudanças visíveis aos usuários. Essas atividades podem incluir a melhoria contínua dos processos de desenvolvimento, 
-
 
 Alguns exemplos podem incluir:
 
@@ -238,12 +262,28 @@ Nesta fase do projeto, espera-se que as práticas ágeis estejam sendo executada
 - [ ] Tem pelo menos 1 issue por membro/dupla por sprint?
 - [ ] Os stand-ups estão acontecendo todos os dias?
 - [ ] Todos os membros se sentem a vontade para falar nos rituais?
-- [ ] 
+
 
 Segue um checklist de alguns artefatos desenvolvidos nessa etapa do projeto:
 
 - [ ] Checklist dos padrões de comunidade de OSS devem ter sido cumpridos [https://opensource.guide](https://opensource.guide)
-- [ ] 
+
+- Métricas de Sucesso:
+    - O participante consegue subir o ambiente do projeto em um ambiente local;
+    - O participante consegue modificar o projeto;
+    - O participante participa ativamente das discussões das sessões teóricas;
+    - Os participantes trabalham em pares para resolver problemas propostos;
+    - O participante se sente confortável compartilhando com o mentor/coach suas dificuldades;
+    - O participante se sente confortável compartilhando suas realizações nas sessões teóricas;
+    - O participante compreende a importância da documentação técnica no ecossistema de código aberto;
+    - O participante estabelece objetivos claros e expectativas sobre o programa e percebe suas melhorias.
+
+- Dicas:
+    - Utilize a programação em pares entre os participantes e superpareamento com mentores técnicos, se necessário;
+    - Divida as tarefas em pedaços menores - tarefas desafiadoras podem criar medos sociais nos novatos;
+    - Como os participantes podem ter diferentes habilidades técnicas, o mentor/coach deve monitorar o progresso dos participantes e garantir que eles se sintam desafiados e motivados;
+    - Os mentores devem se comunicar com a organização sobre as dificuldades enfrentadas pelos participantes para que possamo professor possa ajustar as tarefas/entregas para atender às expectativas dos participantes;
+    - A organização deve analisar semanalmente a pesquisa de mentores e participantes para identificar melhorias e usar os dados para refinar o planejamento das sessões teóricas.
 
 
 ## Fase Desenvolver/Testar
@@ -256,7 +296,7 @@ Durante o curso, os alunos participaram de aulas teóricas, palestras e painéis
 
 Além disso, os alunos são desafiados a escrever reflexões em postagens de blog, conectando os tópicos com suas experiências e projetos. Por exemplo, eles poderiam escrever sobre como a coordenação e a comunicação foram importantes para o sucesso do projeto de programação de cursos. Essas atividades ajudaram os alunos a refletir sobre suas habilidades e conhecimentos e a aplicá-los no contexto do projeto.
 
-## Entregáveis + avaliação
+
 
 
 
@@ -264,31 +304,24 @@ Além disso, os alunos são desafiados a escrever reflexões em postagens de blo
 
 Segue um checklist para ajudar na organização do evento de recepção:
 
-- [ ] Definir dos dias/horários/local dos encontros semanais
-- [ ] Apresentar a visão geral do processo de onboarding
-- [ ] Apresentar as listas de Entregáveis para a Release I e Release II
-- [ ] Definir as datas da Release I e Release II
-- [ ] Definir as equipes/squads
-- [ ] Definir os canais de comunicação (Comunicação rápida/informes, dúvidas, decisões, tarefas)
-- [ ] Definir dias/horários/locais de disponibilidades dos instrutores
-- [ ] Definir dias/horários/locais dos treinamentos
-- [ ] Compartilhar os repositórios de projetos passados
-- [ ] Garantir que todos os participantes tem todos acessos necessários (repositório, lista de e-mails, Discord, etc)
-- [ ] Garantir que todos os participantes tenham os contatos dos instrutores
+- [ ]
 
 Segue um checklist para ajudar na organização da primeira etapa do onboarding para o professor/mentor. 
 
-- [ ] Apresentar o ciclo de vida de projetos de software
-- [ ] Apresentar práticas de gestão de equipes ágeis - Scrum
-- [ ] Apresentar práticas de documentação ágil - issues, templates de issues, comunicação de issues
-- [ ] Apresentar o conceito de timebox e exercitar em atividades síncronas
-- [ ] Organizar um evento para que os clientes possam apresentar os problemas a serem resolvidos com software
 
 Segue um checklist para ajudar na organização da primeira etapa do onboarding para os instrutores.
 
+- Métricas de Sucesso:
+    - O participante contribui para o projeto;
+    - Os participantes se sentem confiantes em suas habilidades para contribuir para outras comunidades de software livre;
+    - Os participantes se sentem motivados a contribuir para projetos de software livre;
+    - O participante entende os benefícios de contribuir para o projeto de software livre (autoaperfeiçoamento, construção de portfólio, mentoria, projetos interessantes).
 
-
-# Parte III - Melhoria Contínua
-
-## Retrospectiva e pontos de melhoria
-
+- Dicas:
+    - Aconselhe os participantes a escolherem issues que estejam de acordo com suas habilidades e objetivos de carreira;
+    - Apresente o fluxo de trabalho de contribuição da comunidade de software livre;
+    - Certifique-se de que todos os participantes tenham o ambiente local funcionando corretamente (caso contrário, faça pair programming com eles para resolver os problemas ou tenha uma codificação ao vivo específica para configurar o ambiente);
+    - Dê feedback constante aos participantes durante o workshop e especialmente em questões / pull requests;
+    - Mapeie questões para diferentes conjuntos de habilidades (documentação, comunicação, implementação, correção de bugs);
+    - Verifique com mais frequência para ver se o participante está bloqueado;
+    - Configure sessões em pares para os participantes trabalharem em contribuições;
